--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
     height: 50px;
     background-color: rgb(43, 117, 255);
     border-radius: 50%;
-    box-shadow: 0 6px 10px 0 #666;
     transition: all 0.1s ease-in-out;
   
     font-size: 20px;
@@ -33,22 +32,21 @@
   
   #myImg:hover {opacity: 0.7;}
   
-  /* The Modal (background) */
   .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.9); 
   }
   
-  /* Modal Content (Image) */
+  
   .modal-content {
     margin: auto;
     display: block;
@@ -56,7 +54,7 @@
     max-width: 700px;
   }
   
-  /* Caption of Modal Image (Image Text) - Same Width as the Image */
+  
   #caption {
     margin: auto;
     display: block;
@@ -68,7 +66,7 @@
     height: 150px;
   }
   
-  /* Add Animation - Zoom in the Modal */
+  
   .modal-content, #caption {
     animation-name: zoom;
     animation-duration: 0.6s;
@@ -79,7 +77,7 @@
     to {transform:scale(1)}
   }
   
-  /* The Close Button */
+  
   .close {
     position: absolute;
     top: 15px;
@@ -97,7 +95,7 @@
     cursor: pointer;
   }
   
-  /* 100% Image Width on Smaller Screens */
+  
   @media only screen and (max-width: 700px){
     .modal-content {
       width: 100%;
